Add students.csv and print students out